src/test/ui/issues/issue-14285.stderr
error[E0621]: explicit lifetime required in the type of `a`
  --> $DIR/issue-14285.rs:12:5
   |
LL | fn foo<'a>(a: &Foo) -> B<'a> {
   |               ---- help: add explicit lifetime `'a` to the type of `a`: `&'a (dyn Foo + 'a)`
LL |     B(a)    //~ ERROR explicit lifetime required in the type of `a` [E0621]
   |     ^^^^ lifetime `'a` required

error: aborting due to previous error

For more information about this error, try `rustc --explain E0621`.
